<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="card1_menu">m1</string>
    <string name="card1_menu_title">Cara Merawat Anggrek</string>
    <string name="card1_menu_content1">Anggrek telah lama menjadi simbol cinta dan keindahan.
        Selain ditanam oleh penggemarnya karena keelokan dan pesonanya, anggrek juga disukai sebagai
        korsase yang dikenakan pada gaun, atau sebagai gelang di pesta dansa dan acara-acara khusus.
        Pada banyak kesempatan, mulai dari pernikahan hingga konferensi, anggrek ditempatkan di
        meja-meja sebagai hiasan.\n\nDengan lebih dari 750 genus anggrek, lebih dari 30.000 anggrek hibrida dan lebih banyak lagi
        anggrek jenis baru setiap tahun, ada berbagai macam anggrek yang bisa dipilih bagi para penggemar
        anggrek. Memang, anggrek tumbuh di setiap benua kecuali Antartika, sehingga penanam anggrek dapat
        memilih antara anggrek asli atau anggrek jenis baru dari hasil persilangan, tergantung pada ketersediaan
        dan kecocokan lingkungan. Dan ketika penggemar anggrek sejati bisa (dan harus) menghabiskan banyak waktu
        untuk rajin membaca banyak buku tentang pertumbuhan dan perawatan anggrek, seorang penanam pemula perlu
        memulainya dengan cara lain. Pada artikel ini, Anda akan mempelajari tentang dasar-dasar merawat anggrek
        yang biasanya tangguh dan mudah tumbuh. Setelah Anda memahami dasar-dasar ini, jika Anda masih bersemangat
        besar untuk menanam anggrek secara lebih intensif, Anda bisa mengeksplorasi varietas anggrek yang lebih
        menantang ketika Anda sudah memiliki rasa percaya diri.</string>
    <string name="card1_menu_title1">Metode 1 : Memilih anggrek</string>
    <string name="card1_menu_content2"><b>1. Carilah anggrek yang tepat untuk rumah Anda.</b> Perawatan anggrek yang tepat dimulai dengan memilih tanaman yang sesuai
        dengan lingkungan tertentu Anda. Anggrek yang dibahas dalam artikel ini adalah yang disarankan bisa tumbuh
        di dalam rumah karena kemampuan adaptasinya terhadap hampir semua kondisi, mudah tumbuh, mudah didapatkan,
        dan bunganya yang indah. Jika Anda ingin mengembangkan anggrek diluar varietas yang disebutkan dalam artikel
        ini nantinya, sebaiknya Anda melakukan banyak penelitian tentang kebutuhan khusus dari varietas anggrek yang
        lebih rapuh dan rewel. Beberapa hal yang perlu diingat ketika memilih anggrek diantaranya:</string>
    <string name="card1_menu_content3">• Apakah anggrek memiliki cukup ruang ketika tumbuh besar? Atau perlu dipindah
        ke tempat lain? Beberapa anggrek bisa tumbuh secara masif ketika sudah dewasa dan yang terbaik adalah ditempatkan
        di dalam rumah kaca.\n\n
        • Dapatkah Anda memenuhi persyaratan suhu yang dibutuhkan oleh anggrek? Anggrek dapat dibagi menjadi tiga jenis
        berdasarkan persyaratan suhu––dingin, sedang dan hangat, yang berarti bahwa anggrek membutuhkan suhu malam minimum
        tertentu agar bisa tumbuh dengan sukses.\n\n
        • Apakah Anda memiliki rumah kaca atau konservatori jika diperlukan? Banyak anggrek yang akan tumbuh dengan subur
        di lingkungan seperti itu daripada jika ditempatkan di dalam rumah atau teras belakang. Jika Anda tidak memilikinya,
        sebaiknya pilihlah anggrek yang suka berada di dalam ruangan (lihat daftarnya di bawah).</string>
    <string name="card1_menu_content4"><b>2. Belilah tanaman yang sudah berbunga.</b> Tanaman yang sudah memiliki bunga
        adalah pembelian yang bagus, karena bibit anggrek memerlukan waktu hingga lima tahun untuk menghasilkan bunga.
        Anda mungkin tidak ingin menunggu selama itu, kecuali Anda sangat sabar, atau sudah memiliki rumah kaca yang
        penuh dengan anggrek.</string>
    <string name="card1_menu_content5"><b>3. Pertimbangkan syarat pertumbuhan Anda.</b> Pilihlah anggrek berdasarkan
        syarat tumbuhnya di rumah Anda. Ini penting karena setiap jenis anggrek memiliki kebutuhan yang berbeda,
        tergantung pada asal-usul anggrek. Bacalah selalu label yang disertakan dalam petunjuknya untuk memastikan
        bahwa tanaman ini cocok untuk kondisi rumah dan taman Anda. Berikut ini adalah beberapa spesies umum anggrek
        yang biasanya tumbuh dengan baik di lingkungan rumah:</string>
    <string name="card1_menu_content6"><b>• Phalaenopsis:</b> Biasanya disebut sebagai anggrek ngengat, ini adalah anggrek
        yang elegan untuk digunakan dalam ruangan. Tangkai bunga warna-warninya yang panjang tetap segar selama berbulan-bulan.
        Munculnya bunga dimulai pada musim dingin atau awal musim semi. Anggrek ini umumnya lebih sedikit membutuhkan cahaya
        daripada anggrek cattleya (lihat berikutnya) dan tumbuh dengan baik di hampir semua kondisi indoor.</string>
    <string name="card1_menu_content7"><b>• Cattleya:</b> anggrek ini paling mudah dikenali karena penggunaannya dalam korsase
        dan memiliki bunga yang dapat bertahan mulai dari dua sampai enam minggu. Anggrek ini biasanya berbunga setahun sekali
        selama musim semi atau musim gugur, tetapi memerlukan jumlah cahaya dua kali lipat dari anggrek ngengat agar bisa tumbuh
        dengan baik di dalam rumah.</string>
    <string name="card1_menu_content8"><b>• Dendrobium:</b> Anggrek yang indah ini mengeluarkan tangkai bunga yang panjang dan anggun
        yang biasanya berwarna putih, lembayung atau kombinasi dari keduanya, selama musim gugur dan musim dingin. Bunganya bisa tetap
        mekar selama sekitar tiga sampai empat minggu, dan merupakan salah satu tanaman yang paling mudah dirawat.</string>
    <string name="card1_menu_content9" tools:ignore="Typos"><b>• Paphiopedilum:</b> Nama populer untuk anggrek ini adalah Lady Slipper (di Indonesia dikenal
        dengan nama anggrek kantong semar), karena kelopak ketiga diubah menjadi bentuk kantong yang terlihat mirip dengan sandal wanita
        (slipper). Fungsi kantongnya untuk menjebak serangga sehingga mereka dipaksa untuk memanjat melewati staminode, yang dibaliknya
        terkumpul atau tersimpan serbuk sari. Daunnya cukup menarik dengan warna hijau atau belang-belang hijau dan putih. Anggrek ini
        membutuhkan cahaya yang terang, tetapi tidak boleh terkena sinar matahari langsung. Di rumah, yang terbaik adalah ditempatkan
        di jendela sebelah timur, barat atau selatan yang teduh (untuk belahan bumi bagian utara). Daunnya secara alami harus semi-tegak
        dan kukuh, tidak terkulai. Suhu ruangan adalah ideal untuk pertumbuhan mereka.</string>
    <string name="card1_menu_title2">Metode 2 : Penyiraman dan Pemupukan</string>
    <string name="card1_menu_content10"><b>1. Pelajari cara menyiram anggrek Anda.</b> Orchidaceae adalah salah satu famili tanaman berbunga
        terbesar, sehingga terdapat banyak sub-famili, atau variasi, dan mereka membutuhkan persyaratan penyiraman yang berbeda. Perlakuan
        yang membuat satu spesies kekeringan bisa menimbulkan risiko tenggelam bagi spesies yang lain. Umumnya, siram anggrek Anda setiap
        lima sampai duabelas hari, tergantung pada jenis anggrek yang Anda miliki, suhu, dan musimnya—–atau lebih banyak disiram di musim
        panas, sedikit disiram di musim dingin. Meskipun penyuluh nursery atau florist bisa memberi informasi yang spesifik kepada Anda, ada
        sebuah panduan umum untuk membantu Anda dalam menentukan cara penyiraman terbaik untuk anggrek Anda:</string>
    <string name="card1_menu_content11">• Jagalah agar varietas-varietas ini tetap lembab (bukan basah) secara merata setiap saat:</string>
    <string name="card1_menu_content12">• Paphiopedilum\n• Miltonia\n• Cymbidium\n• Dontoglossum.</string>
    <string name="card1_menu_content13">• Jagalah agar varietas-varietas ini tetap lembab secara merata ketika masa pertumbuhan aktif,
        tapi biarkan tetap kering diantara waktu penyiraman jika tidak dalam masa pertumbuhan aktif:</string>
    <string name="card1_menu_content14">• Cattleya\n• Oncidium\n• Brassia\n• Dendrobium</string>
    <string name="card1_menu_content15">• Jagalah varietas-varietas ini hampir kering diantara penyiraman:</string>
    <string name="card1_menu_content16">• Phalaenopsis\n• Vanda\n• Ascocenda</string>
    <string name="card1_menu_content17">• Berhati-hatilah untuk tidak membasahi daunnya ketika Anda menyiram anggrek Anda. Jika daunnya basah,
        keringkan dengan lembut menggunakan tisu atau kapas.</string>
    <string name="card1_menu_content18"><b>2. Rawatlah medianya.</b> Angkatlah pot bagian dalam dari pot hiasan di bagian luar, letakkan di wastafel
        atau bak mandi. Tambahkan pupuk anggrek pada kaleng atau wadah penyiraman, dan siram sepenuhnya pot tersebut. Biarkan airnya mengalir sampai
        habis sebelum menempatkannya kembali ke dalam pot hiasannya. Jangan pernah membiarkannya terendam air, karena tanaman itu bisa mati.</string>
    <string name="card1_menu_content19">• Catatan: Anggrek epifit (tumbuh dari cabang) tidak ditanam di dalam tanah seperti varietas anggrek terestrial
        (tumbuh di dalam tanah), tetapi dalam batok kelapa, kulit kayu atau gabus. Atau, mereka dapat tumbuh di keranjang anyaman atau kayu yang ditata
        seperti rakit. Akar mereka tumbuh dari atas, dan bukan di bagian bawah seperti yang biasa ditemukan pada tanaman terestrial.</string>
    <string name="card1_menu_content20"><b>3. Pupuklah anggrek Anda.</b> Secara umum, pemberiannya disarankan sebulan sekali untuk hampir semua unsur pupuk.
        Carilah pupuk yang mengandung nitrogen (N), fosfor (P) dan kalium (K), ditambah elemen seperti besi (Fe). Gunakan pupuk dengan persentase nitrogen
        yang lebih tinggi ketika keluar tunas baru, dan pupuklah dengan lebih banyak fosfor dan kalium nanti ketika sedang musimnya. Jangan berlebihan dalam
        memupuk anggrek––ini bisa merusak anggrek.</string>
    <string name="card1_menu_content21">• Jika Anda menanam anggrek pada kulit kayu, gunakan pupuk dengan nitrogen yang lebih tinggi secara signifikan
        (dengan perbandingan 30 (N)-10 (P)-10 (K)). Bakteri di dalam kulit kayu yang membusuk akan mengkonsumsi banyak nitrogen.\n\n• Siram anggrek Anda
        secara menyeluruh sebelum dipupuk.</string>
    <string name="card1_menu_title3">Metode 3 : Pengepotan</string>
    <string name="card1_menu_content22"><b>1. Pahami kebutuhan yang berbeda dari anggrek terestrial dan epifit.</b> Banyak anggrek yang berjenis epifit
        (tumbuh pada pohon atau cabang) dan membutuhkan media tanam yang sangat berbeda dari anggrek terestrial; memang, anggrek biasanya mati jika ditanam
        di tanah apabila bukan dari jenis anggrek tanah. Epifit memiliki akar berdaging tebal yang digunakan untuk melekatkan diri pada pohon atau kulit kayu
        dan untuk menyerap air dan nutrisi; sedang anggrek yang lain memiliki akar udara yang akan tumbuh menggantung. Anggrek epifit tumbuh dengan baik pada
        campuran yang tidak diberi tanah atau melekat pada potongan kulit kayu atau gabus. Anggrek epifit membutuhkan media tanam dengan aerasi dan drainase
        yang sangat baik.</string>
    <string name="header1_ensiklopedia">Nama Ilmiah: </string>
    <string name="header2_ensiklopedia">Klasifikasi lebih tinggi: </string>
    <string name="header3_ensiklopedia">Ordo: </string>
    <string name="header4_ensiklopedia">Tingkatan takson: </string>
    <string name="founder_title_ensiklopedia">Penemu</string>
    <string name="description_title_ensiklopedia">Deskripsi singkat</string>
    <string name="gallery_title_ensiklopedia">Galeri foto</string>
    <string name="galerry_hint_ensiklopedia">Ketuk disini untuk melihat galeri foto…</string>
    <string name="detail_ensiklopedia">Baca lebih lanjut…</string>
    <string name="ensiklopedia_reference1">Referensi: Wikipedia</string>
</resources>