<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.orchidpedia.EnsiklopediaActivity"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl_ensiklopediaactivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">
            <FrameLayout
                android:id="@+id/ctl_ensiklopediaactivity_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/ctl_ensiklopediaactivity_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:id="@+id/ctl_ensiklopediaactivity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:textAppearance="@style/ctl_title"
                    android:layout_margin="@dimen/margin_ctl_title" />
            </FrameLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_ensiklopediaactivity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorBackground">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardViewStyle"
                android:layout_gravity="center"
                android:layout_margin="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_margin="20dp">
                    <FrameLayout
                        android:id="@+id/frame_header1_ensiklopedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:id="@+id/ensiklopedia_txt1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:text="@string/header1_ensiklopedia"
                            android:textStyle="bold"
                            android:layout_gravity="start|center"/>
                        <TextView
                            android:id="@+id/ensiklopedia_header1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:layout_gravity="end|center"/>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/frame_header2_ensiklopedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:id="@+id/ensiklopedia_txt2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:text="@string/header2_ensiklopedia"
                            android:textStyle="bold"
                            android:layout_gravity="start|center"/>
                        <TextView
                            android:id="@+id/ensiklopedia_header2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:layout_gravity="end|center"/>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/frame_header3_ensiklopedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:id="@+id/ensiklopedia_txt3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:text="@string/header3_ensiklopedia"
                            android:textStyle="bold"
                            android:layout_gravity="start|center"/>
                        <TextView
                            android:id="@+id/ensiklopedia_header3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:layout_gravity="end|center"/>
                    </FrameLayout>
                    <FrameLayout
                        android:id="@+id/frame_header4_ensiklopedia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/ensiklopedia_txt4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:text="@string/header4_ensiklopedia"
                            android:textStyle="bold"
                            android:layout_gravity="start|center"/>
                        <TextView
                            android:id="@+id/ensiklopedia_header4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:layout_gravity="end|center"/>
                    </FrameLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/frame_founder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ensiklopedia_txt5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_title_appearance"
                    android:textStyle="bold"
                    android:text="@string/founder_title_ensiklopedia"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardViewStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cardview"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_ensiklopedia_founder"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginTop="20dp"
                            android:layout_gravity="center"/>
                        <TextView
                            android:id="@+id/ensiklopedia_founder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_marginTop="@dimen/margin_text"
                            android:layout_marginBottom="20dp"
                            android:textAlignment="center"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ensiklopedia_txt6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_title_appearance"
                    android:textStyle="bold"
                    android:text="@string/description_title_ensiklopedia"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardViewStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cardview"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/ensiklopedia_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:layout_margin="@dimen/margin_text"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ensiklopedia_txt7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_title_appearance"
                    android:textStyle="bold"
                    android:text="@string/gallery_title_ensiklopedia"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>
                <android.support.v7.widget.CardView
                    android:id="@+id/gallery_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardViewStyle"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cardview"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <TextView
                            android:id="@+id/ensiklopedia_txt8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/text_appearance"
                            android:layout_margin="20dp"
                            android:layout_gravity="center"
                            android:textColor="@android:color/black"
                            android:textStyle="italic"
                            android:text="@string/galerry_hint_ensiklopedia"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/detail_ensiklopedia"
                android:layout_gravity="center"
                android:textAppearance="@style/text_detail_appearance"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:layout_marginBottom="5dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackgroundReference"
                android:layout_marginTop="10dp">
                <com.orchidpedia.HoneyguideTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/text_reference_appearance"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:text="@string/ensiklopedia_reference1"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
